--- a/products.html
+++ b/products.html
@@ -24,7 +24,7 @@
       </div>
     </nav>
     <div class="container p-5">
-      <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
+      <div class="alert alert-danger" id= "stuff" role="alert" style="position: relative; width:auto; top: 0;"> 
         <h4 class="alert-heading">¡A trabajar! :)</h4>
         <p>Esta sección corresponde a: Entrega 1 (Fecha de entrega: 22/08/2021) y Entrega 2 (Fecha de entrega: 05/09/2021).</p>
         <hr>
