--- a/products.html
+++ b/products.html
@@ -21,14 +21,56 @@
         <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
         <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
+        <a class="py-2 d-none d-md-inline-block" id="nombreUsuario"></a>
       </div>
     </nav>
-    <div class="container p-5">
-      <div class="alert alert-danger" id= "stuff" role="alert" style="position: relative; width:auto; top: 0;"> 
-        <h4 class="alert-heading">¡A trabajar! :)</h4>
-        <p>Esta sección corresponde a: Entrega 1 (Fecha de entrega: 22/08/2021) y Entrega 2 (Fecha de entrega: 05/09/2021).</p>
-        <hr>
-        <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
+    <div class="row">
+      <div class="col text-right">
+          <div class="btn-group btn-group-toggle mb-4" data-toggle="buttons">
+              <label class="btn btn-light active" id="ordenasc" >
+                  <input type="radio" name="options" autocomplete="off" checked><i class="fas fa-sort-amount-up mr-1"></i>Precio Ascendente
+              </label>
+              <label class="btn btn-light" id="ordendesc" >
+                  <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-down mr-1"></i>Precio Descendente
+              </label>
+              <label class="btn btn-light" id="relevancia" >
+                  <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-up mr-1 "></i> ★ Relevancia.
+              </label>
+          </div>
+      </div>
+  </div>
+  <div class="row justify-content-end">
+    <div class="col-md-6"></div>
+      <div class="col-md-6 col-sm-12 mb-1 container">
+        <div class="row container p-0 m-0"> <input type="search" placeholder="Buscador" id="buscador"/>
+          <div class="col text-center" > 
+          </div>  
+            <p class="font-weight-normal text-right my-2">Cant.</p>
+          <div class="col">
+            <input class="form-control" type="number" placeholder="min." id="filtrominimo">
+          </div>
+          <div class="col">
+            <input class="form-control" type="number" placeholder="máx." id="filtromaximo">
+          </div>
+          <div class="col-3 p-0">
+            <div class="btn-group" role="group">
+              <button class="btn btn-light btn-block" id="rangeFilterCount">Filtrar</button>
+              <button class="btn btn-link btn-sm" id="clearRangeFilter">Limpiar</button>
+            </div>
+          </div>
+        </div>
+      </div>
+  </div>
+  <div class="row">
+      <div class="list-group" id="cat-list-container">
+      </div>
+  </div>
+</div>
+</main>
+<footer class="text-muted bg-light">
+<div class="container">
+<p class="float-right">
+    <div class="container p-5" id= "stuff">
       </div>
     </div>
     <footer class="text-muted bg-light">
