--- a/category-info.html
+++ b/category-info.html
@@ -23,7 +23,15 @@
       <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
       <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
       <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
-    </div>
+    </div> <div class="dropdown">
+      <a class="py-2 d-none d-md-inline-block" id="logeado"></a>
+        <button class="btn btn-secondary dropdown-toggle" style="background-color: #4b4c4c;" type="button" id="nombreUsuario" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        </button>
+        <div class="dropdown-menu" aria-labelledby="email">
+          <a class="dropdown-item" href="cart.html">Ver mi carrito</a>
+          <a class="dropdown-item" href="my-profile.html">Mi perfil</a>
+          <a class="dropdown-item" href="login.html">Cerrar sesion</a>
+        </div>
   </nav>
   <main role="main">
     <div class="container mt-5">
