--- a/login.html
+++ b/login.html
@@ -55,7 +55,7 @@
                   
                     <h3 class="mb-5"></h3>
                   <div class="form-outline mb-4">
-                    <input type="text" id="email" class="form-control form-control-lg" onblur="cargarErrores('email','typePasswordX');" placeholder="Ingrese su correo"/>
+                    <input type="email" id="email" class="form-control form-control-lg" onblur="cargarErrores('email','typePasswordX');" placeholder="Ingrese su correo"/>
                     <label class="form-label" for="email">Email</label>
             <span id="typeEmailX"></span><br>
 
