--- a/my-profile.html
+++ b/my-profile.html
@@ -43,13 +43,40 @@
       <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
     </div>
   </nav>
+  <center><img src="img/cover_back.png" style="width: 100%;"></center>
+  <div id="carritoCont"></div>
+  
   <div class="container p-5">
-    <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
-      <h4 class="alert-heading">¡A trabajar! :)</h4>
-      <p>Esta sección corresponde a: Entrega 6 (Fecha de entrega: 31/10/2021).</p>
-      <hr>
-      <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
-    </div>
+    <h1>Mi perfil</h1>
+    <form>
+      <div class="form-group row">
+        <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
+        <div class="col-sm-10">
+          <input type="text" readonly class="form-control-plaintext" id="email" value="email@example.com">
+        </div>
+      </div>
+      <div class="form-group row">
+        <div class="col" >
+          <input type="text" class="form-control" id="nomb" placeholder="Nombres">
+        </div>
+        <div class="col">
+          <input type="text" class="form-control" id="ape"placeholder="Apellidos">
+        </div>
+      </div>
+        <div class="form-group row">
+          <label for="inputPassword" class="col-sm-2 col-form-label">Edad</label>
+          <div class="col-sm-10">
+            <input type="number" class="form-control" id="inputEdad" placeholder="---">
+          </div>
+      </div>
+      <div class="form-group row">
+        <label for="inputPassword" class="col-sm-2 col-form-label">Teléfono de contacto</label>
+        <div class="col-sm-10">
+          <input type="number" class="form-control" id="inputTel" placeholder="---">
+        </div>
+      </div>
+      <input type="button" id="guardar" value="Guardar">
+    </form>
   </div>
   <footer class="text-muted bg-light">
     <div class="container">
