--- a/products.html
+++ b/products.html
@@ -51,7 +51,7 @@
   <div class="row justify-content-end">
     <div class="col-md-6"></div>
       <div class="col-md-6 col-sm-12 mb-1 container">
-        <div class="row container p-0 m-0"> <input type="search" placeholder="Buscador" id="buscador"/>
+        <div class="row"> <input type="search" placeholder="Buscador" id="buscador"/>
           <div class="col text-center" > 
           </div>  
             <p class="font-weight-normal text-right my-2">Cant.</p>
@@ -70,16 +70,16 @@
         </div>
       </div>
   </div>
-  <div class="row">
-      <div class="list-group" id="cat-list-container">
+  
       </div>
   </div>
 </div>
 </main>
 <footer class="text-muted bg-light">
 <div class="container">
+  <div class="row" ldknid= "stuff"></div>
 <p class="float-right">
-    <div class="container p-5" id= "stuff">
+    <div  >
       </div>
     </div>
     <footer class="text-muted bg-light">
